--- a/src/app.css
+++ b/src/app.css
@@ -24,6 +24,8 @@
 @import '@skeletonlabs/skeleton/themes/cerberus';
 
 @import '@fortawesome/fontawesome-free/css/all.min.css';
+@import 'animate.css';
+@import 'aos/dist/aos.css';
 
 @source '../node_modules/@skeletonlabs/skeleton-svelte/dist';
 
